--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,8 +19,9 @@
 
       <h2 class="govuk-heading-m">Pages</h2>
       <ol class="govuk-list govuk-list--number">
-        <li><a href="services-list">Services list page (3 services)</a></li>
-        <li><a href="services-list-2">Services list page (20 services)</a></li>
+        <li><a href="services-list">Services list page (4 services)</a></li>
+        <li><a href="services-list-2">Services list page (50 services)</a></li>
+        <li><a href="services-list">Services list page (1 service for everything)</a></li>
         <li><a href="#">Adding a new service</a></li>
         <li><a href="fishing-licence">Dashboard for a service (first time use)</a></li>
         <li><a href="#">Dashboard for a service (regular use)</a></li>
