--- a/app/views/services-list.html
+++ b/app/views/services-list.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">
-        You have 3 services
+        You have 6 services
       </h2>
 
             <p>
@@ -46,9 +46,12 @@
   <div class="live-icon"></div>
 <h3  class="govuk-heading-s">Live</h3>
 
+</div>
+
+<div class="service-in-list">
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h2 class="govuk-heading-s">Fishing licence &nbsp;
+    <h2 class="govuk-heading-s">Fishing licence </br>
     <span  class="govuk-body-s"><a href="fishing-licence">Dashboard</a></h2>
 
   </div>
@@ -58,6 +61,24 @@
   £450.00 in the last week
   </br>7 team members</p>
   </div>
+</div>
+  </div>
+</div>
+
+<div class="service-in-list">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds-from-desktop">
+    <h2 class="govuk-heading-s">Blue Badge </br>
+    <span  class="govuk-body-s"><a href="fishing-licence">Dashboard</a></h2>
+
+  </div>
+  <div class="govuk-grid-column-one-third-from-desktop">
+    <div class="service-metadata">
+<p class="govuk-body-s">
+  £450.00 in the last week
+  </br>2 team members</p>
+  </div>
+</div>
 
   </div>
 </div>
@@ -66,9 +87,11 @@
   <div class="test-icon"></div>
 <h3  class="govuk-heading-s">Test</h3>
 </div>
+
+<div class="service-in-list">
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h2 class="govuk-heading-s">Parking permit &nbsp;
+    <h2 class="govuk-heading-s">Parking permit </br>
     <span  class="govuk-body-s"><a href="#">Dashboard</a></h2>
   </div>
   <div class="govuk-grid-column-one-third-from-desktop">
@@ -76,8 +99,54 @@
     <p class="govuk-body-s">
       <a href="#">Request to go live</a>
       </div>
-
+    </div>
     </div>
   </div>
+
+  <div class="service-in-list">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds-from-desktop">
+      <h2 class="govuk-heading-s">Blue Badge test </br>
+      <span  class="govuk-body-s"><a href="#">Dashboard</a></h2>
+    </div>
+    <div class="govuk-grid-column-one-third-from-desktop">
+      <div class="service-metadata">
+      <p class="govuk-body-s">
+        <a href="#">Request to go live</a>
+        </div>
+      </div>
+      </div>
+    </div>
+
+
+    <div class="service-in-list">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds-from-desktop">
+        <h2 class="govuk-heading-s">Bin replacements </br>
+        <span  class="govuk-body-s"><a href="#">Dashboard</a></h2>
+      </div>
+      <div class="govuk-grid-column-one-third-from-desktop">
+        <div class="service-metadata">
+        <p class="govuk-body-s">
+          <a href="#">Request to go live</a>
+          </div>
+        </div>
+        </div>
+      </div>
+<div class="service-in-list">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds-from-desktop">
+    <h2 class="govuk-heading-s">Test service </br>
+    <span  class="govuk-body-s"><a href="#">Dashboard</a></h2>
+  </div>
+  <div class="govuk-grid-column-one-third-from-desktop">
+    <div class="service-metadata">
+    <p class="govuk-body-s">
+      <a href="#">Request to go live</a>
+      </div>
+    </div>
+    </div>
+  </div>
+
 
 {% endblock %}
