--- a/app/views/fishing-licence.html
+++ b/app/views/fishing-licence.html
@@ -24,32 +24,40 @@
       </div>
       </div>
 
+<h3 class="govuk-heading-m">Get started</h3>
       <div class="onboarding-chunk">
-      <p>What you need to do next</p>
+      <p class="govuk-body-m"><a href="#">Make a demo payment</a></p>
         </div>
 
+<!--
       <div class="next-things-to-do">
         <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-half">
-      <p><a href="#">Make a demo payment</p>
+      <p class="govuk-heading-s"><a href="#">Make a demo payment</a></p>
+        <p class="govuk-body-m">Try the payment experience as a user. Then view the completed payment as an administrator on GOV.UK Pay.</p>
           </div>
 
       <div class="govuk-grid-column-one-half">
-        <p><a href="#">Test with your users</a></p>
+        <p class="govuk-heading-s"><a href="#">Test with your users</a></p>
+        <p class="govuk-body-m">Create a reusable link to integrate your service prototype with GOV.UK Pay and test with users.</p>
           </div>
           </div>
 
           <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-half">
-      <p><a href="#">Manage team members</a></p>
+      <p class="govuk-heading-s"><a href="#">Manage team members</a></p>
+      <p class="govuk-body-m">Team member changes affect both live and test environments.</p>
         </div>
-
+<!--
         <div class="govuk-grid-column-one-half">
           <p><a href="#">Setting up your live account</a></p>
             </div>
             </div>
-</div>
+            -->
 
+
+<div class="dashboard-numbers-container">
+  <div class="sort-transactions">
 <div class="govuk-form-group">
   <label class="govuk-label" for="sort">
     Sort by
@@ -61,24 +69,30 @@
     <option value="comments">Most comments</option>
   </select>
 </div>
+</div>
       <div class="dashboard-numbers">
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
-          <div class="chunk-payments"
-          <p>Successful payments</p>
+    <p class="govuk-heading-s">  Successful payments</p>
+          <div class="chunk-payments">
+          <p class="govuk-body-l">£0.00</p>
           </div>
         </div>
         <div class="govuk-grid-column-one-third">
-          <div class="chunk-refunds"
-          <p>Successful refunds</p>
+          <p class="govuk-heading-s">  Successful refunds</p>
+          <div class="chunk-refunds">
+            <p class="govuk-body-l">£0.00</p>
         </div>
         </div>
+
         <div class="govuk-grid-column-one-third">
-          <div class="chunk-income"
-          <p>Net income</p>
+          <p class="govuk-heading-s">  Net income</p>
+          <div class="chunk-income">
+            <p class="govuk-body-l">£0.00</p>
           </div>
         </div>
         </div>
+      </div>
       </div>
 
 
