--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,7 +17,15 @@
       </p>
 
 
-      <h2 class="govuk-heading-m">Pages</h2>
+      <h2 class="govuk-heading-m">Working pages</h2>
+      <ol class="govuk-list govuk-list--number">
+        <li><a href="services-list">Services list page (6 services)</a></li>
+        <li><a href="fishing-licence">Dashboard for a service (first time use)</a></li>
+      </ol>
+
+
+
+      <h2 class="govuk-heading-m">Draft scenarios</h2>
       <ol class="govuk-list govuk-list--number">
         <li><a href="services-list">Services list page (6 services)</a></li>
         <li><a href="services-list-2">Services list page (50 services)</a></li>
