--- a/app/views/services-list.html
+++ b/app/views/services-list.html
@@ -10,22 +10,27 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">
-        You have 6 services
+        You have 4 services
       </h2>
-
-            <p>
-            <a href="#">View transactions for all live services</a>
-            </p>
       <button class="govuk-button" data-module="govuk-button">
   Add a new service
-</button>
+  </button>
+            <p class="govuk-body-s">
+            <a href="#">View transactions for all live services</a></p>
+                  <p class="govuk-body-s">
+            <a href="#">View payments to your bank account</a>
+            </p>
 
 
-<!-- search bar placeholder
+<div class="filter-services-block">
+  <h3 class="govuk-heading-s">Filter services</h3>
 <div class="govuk-form-group">
   <input class="govuk-input" id="event-name" name="event-name" type="text">
 </div>
--->
+</div>
+
+
+<!--  SORT placeholder
 
 <div class="govuk-form-group">
   <label class="govuk-label" for="sort">
@@ -38,115 +43,150 @@
     <option value="comments">Most comments</option>
   </select>
 </div>
+-->
 
 
-
-
+<!--
 <div class="division-header">
   <div class="live-icon"></div>
 <h3  class="govuk-heading-s">Live</h3>
-
 </div>
+-->
 
 <div class="service-in-list">
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h2 class="govuk-heading-s">Fishing licence </br>
-    <span  class="govuk-body-s"><a href="fishing-licence">Dashboard</a></h2>
-
-  </div>
-  <div class="govuk-grid-column-one-third-from-desktop">
-    <div class="service-metadata">
-<p class="govuk-body-s">
-  £450.00 in the last week
-  </br>7 team members</p>
-  </div>
-</div>
-  </div>
-</div>
-
-<div class="service-in-list">
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h2 class="govuk-heading-s">Blue Badge </br>
-    <span  class="govuk-body-s"><a href="fishing-licence">Dashboard</a></h2>
-
-  </div>
-  <div class="govuk-grid-column-one-third-from-desktop">
-    <div class="service-metadata">
-<p class="govuk-body-s">
-  £450.00 in the last week
-  </br>2 team members</p>
-  </div>
-</div>
-
-  </div>
-</div>
-
-<div class="division-header">
-  <div class="test-icon"></div>
-<h3  class="govuk-heading-s">Test</h3>
-</div>
-
-<div class="service-in-list">
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h2 class="govuk-heading-s">Parking permit </br>
-    <span  class="govuk-body-s"><a href="#">Dashboard</a></h2>
-  </div>
-  <div class="govuk-grid-column-one-third-from-desktop">
-    <div class="service-metadata">
-    <p class="govuk-body-s">
-      <a href="#">Request to go live</a>
+      <div class="division-header">
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds-from-desktop">
+            <div class="live-icon"></div>
+            <h2 class="govuk-heading-s">Fishing licence </h2>
       </div>
-    </div>
-    </div>
-  </div>
 
-  <div class="service-in-list">
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds-from-desktop">
-      <h2 class="govuk-heading-s">Blue Badge test </br>
-      <span  class="govuk-body-s"><a href="#">Dashboard</a></h2>
-    </div>
-    <div class="govuk-grid-column-one-third-from-desktop">
-      <div class="service-metadata">
-      <p class="govuk-body-s">
-        <a href="#">Request to go live</a>
+
+        <div class="net-income-summary-container">
+          <p class="govuk-!-font-size-14">
+            Net income (Live)
+          </p>
+          <div class="net-income-summary">
+            <p class="govuk-!-font-size-16">
+              £450.00
+              </p>
+            </div>
         </div>
-      </div>
-      </div>
-    </div>
+  </div>
 
-
-    <div class="service-in-list">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
-        <h2 class="govuk-heading-s">Bin replacements </br>
-        <span  class="govuk-body-s"><a href="#">Dashboard</a></h2>
-      </div>
-      <div class="govuk-grid-column-one-third-from-desktop">
-        <div class="service-metadata">
+  <div class="govuk-grid-column-one-third-from-desktop">
+      <div class="service-links">
         <p class="govuk-body-s">
-          <a href="#">Request to go live</a>
+          <a href="fishing-licence">Live dashboard</a>
+            </br><a href="#">Test dashboard</a></p>
           </div>
         </div>
-        </div>
-      </div>
+  </div>
+</div>
+
+
 <div class="service-in-list">
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h2 class="govuk-heading-s">Test service </br>
-    <span  class="govuk-body-s"><a href="#">Dashboard</a></h2>
-  </div>
-  <div class="govuk-grid-column-one-third-from-desktop">
-    <div class="service-metadata">
-    <p class="govuk-body-s">
-      <a href="#">Request to go live</a>
+      <div class="division-header">
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds-from-desktop">
+            <div class="live-icon"></div>
+            <h2 class="govuk-heading-s">Parking permit </h2>
       </div>
-    </div>
-    </div>
+
+
+        <div class="net-income-summary-container">
+          <p class="govuk-!-font-size-14">
+            Net income (Live)
+          </p>
+          <div class="net-income-summary">
+            <p class="govuk-!-font-size-16">
+              £450.00
+              </p>
+            </div>
+        </div>
   </div>
+
+  <div class="govuk-grid-column-one-third-from-desktop">
+      <div class="service-links">
+        <p class="govuk-body-s">
+          <a href="fishing-licence">Live dashboard</a>
+            </br><a href="#">Test dashboard</a></p>
+          </div>
+        </div>
+  </div>
+</div>
+
+
+
+
+<div class="service-in-list">
+      <div class="division-header">
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds-from-desktop">
+            <div class="test-icon"></div>
+            <h2 class="govuk-heading-s">Test service </h2>
+      </div>
+
+
+        <div class="net-income-summary-container">
+            <p class="govuk-body-s"><a href="#">Request to go live</p>
+          <!--
+          <p class="govuk-!-font-size-14">
+            Net income (Live)
+          </p>
+          <div class="net-income-summary">
+            <p class="govuk-!-font-size-16">
+              £450.00
+              </p>
+              -->
+
+        </div>
+  </div>
+
+  <div class="govuk-grid-column-one-third-from-desktop">
+      <div class="service-links">
+        <p class="govuk-body-s">
+            </br><a href="#">Test dashboard</a></p>
+          </div>
+        </div>
+  </div>
+</div>
+
+
+<div class="service-in-list">
+      <div class="division-header">
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds-from-desktop">
+            <div class="test-icon"></div>
+            <h2 class="govuk-heading-s">Another test </h2>
+      </div>
+
+
+        <div class="net-income-summary-container">
+          <p class="govuk-body-s"><a href="#">Request to go live</p>
+          <!--
+          <p class="govuk-!-font-size-14">
+            Net income (Live)
+          </p>
+          <div class="net-income-summary">
+            <p class="govuk-!-font-size-16">
+              £450.00
+              </p>
+              -->
+
+        </div>
+  </div>
+
+  <div class="govuk-grid-column-one-third-from-desktop">
+      <div class="service-links">
+        <p class="govuk-body-s">
+            </br><a href="#">Test dashboard</a></p>
+          </div>
+        </div>
+  </div>
+</div>
+
+
 
 
 {% endblock %}
