--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,6 +19,7 @@
 
       <h2 class="govuk-heading-m">Working pages</h2>
       <ol class="govuk-list govuk-list--number">
+        <li><a href="services-list-separated">Services split into Live and Test lists</a></li>
         <li><a href="services-list">Services list page (6 services)</a></li>
         <li><a href="fishing-licence">Dashboard for a service (first time use)</a></li>
       </ol>
