--- a/app/views/services-list.html
+++ b/app/views/services-list.html
@@ -58,7 +58,7 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds-from-desktop">
             <div class="live-icon"></div>
-            <h2 class="govuk-heading-s">Fishing licence </h2>
+            <h2 class="govuk-heading-s">Fishing licence &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
       </div>
 
 
@@ -90,7 +90,7 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds-from-desktop">
             <div class="live-icon"></div>
-            <h2 class="govuk-heading-s">Parking permit </h2>
+            <h2 class="govuk-heading-s">Parking permit  &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
       </div>
 
 
@@ -124,7 +124,7 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds-from-desktop">
             <div class="test-icon"></div>
-            <h2 class="govuk-heading-s">Test service </h2>
+            <h2 class="govuk-heading-s">Test service  &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
       </div>
 
 
@@ -158,7 +158,7 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds-from-desktop">
             <div class="test-icon"></div>
-            <h2 class="govuk-heading-s">Another test </h2>
+            <h2 class="govuk-heading-s">Another test  &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
       </div>
 
 
