--- a/app/views/manage-service-settings.html
+++ b/app/views/manage-service-settings.html
@@ -75,7 +75,7 @@
 
       </div>
       <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="past-week">
-        <h2 class="govuk-heading-l">Team members</h2>
+        <h2 class="govuk-heading-m">Team members</h2>
         <p class="govuk-body-m">Team member changes affect both live and test environments.</p>
         <button class="govuk-button" data-module="govuk-button">
           Invite a team member
@@ -86,7 +86,7 @@
         <p class="govuk-body-m"><a href="#">edgar.fish@digital.cabinet-office.gov.uk</a></p>
       </div>
       <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="past-month">
-        <h2 class="govuk-heading-l">Organisation details</h2>
+        <h2 class="govuk-heading-m">Organisation details</h2>
         <p class="govuk-body-m">Payment card schemes require the details of the organisation taking payment to be shown on payment pages.</p>
 
       </div>
