--- a/app/views/fishing-licence.html
+++ b/app/views/fishing-licence.html
@@ -12,7 +12,17 @@
   <h3 class="govuk-heading-s"><a href="services-list">My services</a> > Fishing licence</h3>
   </div>
   <div class="navigation-links">
-  <p class="govuk-body-s"><a href="#">Dashboard</a> &nbsp; <a href="#">Transactions</a>  &nbsp; <a href="#">Payment links</a> &nbsp; <a href="#">Settings</a></p>
+  <p class="govuk-body-s">
+    <span class="navlink link-selected">
+    <a href="fishing-licence">Dashboard</a>
+    </span>
+    <span class="navlink"> <a href="transactions">Transactions</a></span>
+    <span class="navlink">
+   <a href="#">Payment links</a>
+   </span>
+   <span class="navlink">
+    <a href="#">Settings</a></p>
+    </span>
   </div>
   </div>
 
