--- a/app/views/services-list.html
+++ b/app/views/services-list.html
@@ -77,8 +77,8 @@
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
-          <a href="fishing-licence">Live dashboard</a>
-            </br><a href="#">Test dashboard</a></p>
+          <a href="fishing-licence">Live payments</a>
+            </br><a href="#">Test payments</a></p>
           </div>
         </div>
   </div>
@@ -109,8 +109,8 @@
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
-          <a href="fishing-licence">Live dashboard</a>
-            </br><a href="#">Test dashboard</a></p>
+          <a href="fishing-licence">Live payments</a>
+            </br><a href="#">Test payments</a></p>
           </div>
         </div>
   </div>
@@ -146,7 +146,7 @@
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
-            </br><a href="#">Test dashboard</a></p>
+            </br><a href="#">Test payments</a></p>
           </div>
         </div>
   </div>
@@ -180,7 +180,7 @@
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
-            </br><a href="#">Test dashboard</a></p>
+            </br><a href="#">Test payments</a></p>
           </div>
         </div>
   </div>
