--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,6 +22,7 @@
       <h2 class="govuk-heading-m">Working pages</h2>
       <ol class="govuk-list govuk-list--number">
         <li><a href="services-list">Services list page (4 services)</a></li>
+        <li><a href="manage-service-settings">Manage service settings</a></li>
         <li><a href="fishing-licence">Dashboard for a service (first time use)</a></li>
       </ol>
 
