--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,8 +16,15 @@
       Usability improvements to the services list page, adding a new service and the dashboard.
       </p>
 
-      <p>Manually updated: 18 August 2020</p>
+      <p>Manually updated: 19 August 2020</p>
 
+
+      <h2 class="govuk-heading-m">User research placeholder pages</h2>
+        <ol class="govuk-list govuk-list--number">
+          <li>Central Government department with one big service (Passports)</li>
+          <li>Local authority with just one service</li>
+          <li>Lots of services (could be central or local)</li>
+          </ol>
 
       <h2 class="govuk-heading-m">Working pages</h2>
       <ol class="govuk-list govuk-list--number">
