--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,9 +21,9 @@
 
       <h2 class="govuk-heading-m">User research placeholder pages</h2>
         <ol class="govuk-list govuk-list--number">
-          <li>Central Government department with one big service (Passports)</li>
+          <li>Central Government department with one big service (Passports) (<a href="ho-services-list">here</a>)</li>
           <li>Local authority with just one service</li>
-          <li>Lots of services (could be central or local)</li>
+          <li>Lots of services (could be central or local)  (<a href="many-services-list">here</a>)</li>
           </ol>
 
       <h2 class="govuk-heading-m">Working pages</h2>
