--- a/app/views/manage-service-settings.html
+++ b/app/views/manage-service-settings.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
       <div class="nav-block">
         <div class="service-title">
-        <h3 class="govuk-heading-s"><a href="services-list">My services</a> > Fishing licence settings</h3>
+        <h3 class="govuk-heading-s"><a href="services-list">My services</a> > Service settings</h3>
         </div>
 
         </div>
