--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -292,3 +292,10 @@ margin-bottom: 50px;}
 .input-wrapper {
   width: 75%;
 }
+
+
+.user-research {
+  border: 10px solid green;
+  padding: 30px;
+  margin-bottom: 20px;
+}
