--- a/app/views/one-services-list.html
+++ b/app/views/one-services-list.html
@@ -77,9 +77,9 @@
 
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
-        <p class="govuk-body-s">
-          <a href="fishing-licence">Live payments</a>
-            </br><a href="#">Test payments</a></p>
+        <p class="govuk-body-m">
+          <a href="invoices">Live dashboard</a>
+            </br><a href="#">Test dashboard</a></p>
           </div>
         </div>
   </div>
@@ -115,7 +115,7 @@
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
-            </br><a href="#">Test payments</a></p>
+            </br><a href="#">Test dashboard</a></p>
           </div>
         </div>
   </div>
