--- a/app/views/transactions.html
+++ b/app/views/transactions.html
@@ -27,12 +27,16 @@
   </div>
 
   <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">
         Transactions
       </h2>
+      </div>
+      </div>
+
       <div class="transactions-placeholder">
         <p>Transactions placeholder</p>
-    
+
       </div>
 
 
