--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,15 +16,22 @@
       Usability improvements to the services list page, adding a new service and the dashboard.
       </p>
 
-      <p>Manually updated: 19 August 2020</p>
+      <p>Updated: 20 August 2020</p>
 
+        <div class="user-research">
 
-      <h2 class="govuk-heading-m">User research placeholder pages</h2>
+      <h2 class="govuk-heading-m">User research &mdash; 21 August 2020</h2>
         <ol class="govuk-list govuk-list--number">
-          <li>Central Government department with one big service (Passports) (<a href="ho-services-list">here</a>)</li>
+          <li><span class="strong">Department running everything through 1 service </span></br>
+             <a href="one-services-list">Services list page</a>,
+                <a href="invoices">Dashboard</a></li>
+                <!--
           <li>Local authority with just one service</li>
           <li>Lots of services (could be central or local)  (<a href="many-services-list">here</a>)</li>
+          -->
           </ol>
+
+          </div>
 
       <h2 class="govuk-heading-m">Working pages</h2>
       <ol class="govuk-list govuk-list--number">
