--- a/app/views/one-services-list.html
+++ b/app/views/one-services-list.html
@@ -77,7 +77,7 @@
 
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
-        <p class="govuk-body-m">
+        <p class="govuk-body-s">
           <a href="invoices">Live dashboard</a>
             </br><a href="#">Test dashboard</a></p>
           </div>
