--- a/app/views/services-list.html
+++ b/app/views/services-list.html
@@ -29,23 +29,22 @@
 </div>
 </div>
 
-
-<!--  SORT placeholder
+<div class="sortblockcontainer">
+<div class="sortblock">
 
 <div class="govuk-form-group">
   <label class="govuk-label" for="sort">
-    Sort by
+  Show
   </label>
   <select class="govuk-select" id="sort" name="sort">
-    <option value="published">Recently published</option>
-    <option value="updated" selected>Recently updated</option>
-    <option value="views">Most views</option>
-    <option value="comments">Most comments</option>
+    <option value="published">Last 3 months</option>
+    <option value="updated">Last month</option>
+    <option value="views">Last week</option>
+    <option value="comments" selected>Last day</option>
   </select>
 </div>
--->
-
-
+</div>
+</div>
 <!--
 <div class="division-header">
   <div class="live-icon"></div>
@@ -76,9 +75,9 @@
 
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
-        <p class="govuk-body-s">
-          <a href="fishing-licence">Live payments</a>
-            </br><a href="#">Test payments</a></p>
+        <p class="govuk-heading-s">
+          <a href="fishing-licence">Live Stripe dashboard</a></br>
+          <span class="govuk-body-s"><a href="#">Test dashboard</a></p>
           </div>
         </div>
   </div>
@@ -108,9 +107,9 @@
 
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
-        <p class="govuk-body-s">
-          <a href="fishing-licence">Live payments</a>
-            </br><a href="#">Test payments</a></p>
+        <p class="govuk-heading-s">
+          <a href="fishing-licence">Live WorldPay dashboard</a></br>
+          <span class="govuk-body-s"><a href="#">Test Sandbox dashboard</a></p>
           </div>
         </div>
   </div>
@@ -124,7 +123,7 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds-from-desktop">
             <div class="test-icon"></div>
-            <h2 class="govuk-heading-s">Test service  &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
+            <h2 class="govuk-heading-s">Testing a service  &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
       </div>
 
 
@@ -146,7 +145,7 @@
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
-            </br><a href="#">Test payments</a></p>
+            </br><a href="#">Test WorldPay dashboard</a></p>
           </div>
         </div>
   </div>
@@ -180,7 +179,7 @@
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
-            </br><a href="#">Test payments</a></p>
+            </br><a href="#">Test dashboard</a></p>
           </div>
         </div>
   </div>
