--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -273,6 +273,7 @@ margin-bottom: 50px;}
   float: left;
   margin-top: -30px;
   margin-left: 20px;
+  width: 250px;
 }
 
 
@@ -298,4 +299,13 @@ margin-bottom: 50px;}
   border: 10px solid green;
   padding: 30px;
   margin-bottom: 20px;
+}
+
+.sortblockcontainer {
+  display: block;
+  height: 75px;
+}
+
+.sortblock {
+  float: right;
 }
