--- a/app/views/one-services-list.html
+++ b/app/views/one-services-list.html
@@ -22,28 +22,34 @@
             </p>
 
 
-<div class="filter-services-block">
-  <h3 class="govuk-heading-s">Filter services</h3>
-<div class="govuk-form-group">
-  <input class="govuk-input" id="event-name" name="event-name" type="text">
-</div>
-</div>
+<div class="search-controls">
+  <div class="filter-services-block">
+    <h3 class="govuk-heading-s">Filter services</h3>
+  <div class="govuk-form-group">
+    <input class="govuk-input" id="event-name" name="event-name" type="text">
+  </div>
+  </div>
 
 
-<!--  SORT placeholder
+  <div class="sortblockcontainer">
+  <div class="sortblock">
 
-<div class="govuk-form-group">
-  <label class="govuk-label" for="sort">
-    Sort by
-  </label>
-  <select class="govuk-select" id="sort" name="sort">
-    <option value="published">Recently published</option>
-    <option value="updated" selected>Recently updated</option>
-    <option value="views">Most views</option>
-    <option value="comments">Most comments</option>
-  </select>
+  <div class="govuk-form-group">
+    <label class="govuk-label" for="sort">
+    Net income
+    </label>
+    <select class="govuk-select" id="sort" name="sort">
+      <option value="published">Last 3 months</option>
+      <option value="updated">Last month</option>
+      <option value="views">Last week</option>
+      <option value="comments" selected>Last day</option>
+    </select>
+  </div>
+  </div>
+  </div>
+
 </div>
--->
+
 
 
 <!--
@@ -53,23 +59,22 @@
 </div>
 -->
 
-
 <div class="service-in-list">
       <div class="division-header">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds-from-desktop">
             <div class="live-icon"></div>
-            <h2 class="govuk-heading-s">Invoices  &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
+            <h2 class="govuk-heading-s">Invoices &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
       </div>
 
 
         <div class="net-income-summary-container">
           <p class="govuk-!-font-size-14">
-            Net income (Live)
+            Net income
           </p>
           <div class="net-income-summary">
             <p class="govuk-!-font-size-16">
-              £500.00
+              £450.00
               </p>
             </div>
         </div>
@@ -77,13 +82,14 @@
 
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
-        <p class="govuk-body-s">
-          <a href="invoices">Live dashboard</a>
-            </br><a href="#">Test dashboard</a></p>
+        <p class="govuk-heading-s">
+          <a href="fishing-licence">Live Stripe dashboard</a></br>
+          <span class="govuk-body-s"><a href="#">Test dashboard</a></p>
           </div>
         </div>
   </div>
 </div>
+
 
 
 
@@ -93,7 +99,7 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds-from-desktop">
             <div class="test-icon"></div>
-            <h2 class="govuk-heading-s">Test service  &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
+            <h2 class="govuk-heading-s">Testing a service  &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
       </div>
 
 
@@ -112,6 +118,7 @@
         </div>
   </div>
 
+
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
@@ -121,9 +128,9 @@
   </div>
 </div>
 
-
-
-
+<div class="service-archive">
+  <p class="govuk-body-m"><a href="#">View archived services</a>
+</div>
 
 
 
